restockin handler updated
